add google Oauth2 basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ connection.pool.maxIdleTime=3000
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.packagesToScan=com.longnguyenquy.entity
+
+#
+# Google OAuth2
+#
+google.app.id=620331720388-sgff3utkvvg2hl52r8j8eultsqeff6a2.apps.googleusercontent.com
+google.app.secret=h96lKQxZ0HkLjIlYazqvFIQy
+google.redirect.uri=http://localhost:8080/hogwarts-bookstore/login/google
+google.link.get.token=https://accounts.google.com/o/oauth2/token
+google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
