--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # JDBC connection properties
 #
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/online_book_store?useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/online_book_store
 jdbc.user=springstudent
 jdbc.password=springstudent
 
